--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,6 @@
   </head>
   <body>
     <div class="stars"></div>
-    <div class="twinkling"></div>
-    <div class="clouds"></div>
-    <div id="root"></div>
+    <div class="twinkling"><div id="root"></div></div>
   </body>
 </html>
