--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Moniesh Ravichandran</title>
+    <link rel="stylesheet" href="../src/index.css" />
   </head>
   <body>
-    <div class="stars"></div>
-    <div class="twinkling"><div id="root"></div></div>
+<div id="root"></div>
   </body>
 </html>
